// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThirdPillarStatusBox renders the "open third pillar" flow when user has no pillar active 1`] = `
<StatusBoxRow
  lines={
    Array [
      <Message>
        account.status.choice.pillar.third.missing.label
      </Message>,
    ]
  }
  name={
    <Message>
      account.status.choice.pillar.third
    </Message>
  }
  showAction={true}
>
  <Link
    className="btn btn-light"
    to="/3rd-pillar-flow"
  >
    <Message>
      account.status.choice.pillar.third.missing.action
    </Message>
  </Link>
</StatusBoxRow>
`;

exports[`ThirdPillarStatusBox renders the "payment incomplete" flow when funds have not transferred yet 1`] = `
<StatusBoxRow
  lines={
    Array [
      <React.Fragment>
        <Message>
          account.status.choice.pillar.third.paymentIncomplete.label
        </Message>
        <InfoTooltip
          name="third-pillar-tooltip"
        >
          <Message>
            account.status.choice.pillar.third.paymentInfo
          </Message>
        </InfoTooltip>
      </React.Fragment>,
      <small
        className="text-muted"
      >
        <Message
          params={
            Object {
              "contribution": <b>
                20
              </b>,
            }
          }
        >
          account.status.yearToDateContribution
        </Message>
      </small>,
    ]
  }
  name={
    <Message>
      account.status.choice.pillar.third
    </Message>
  }
  showAction={true}
>
  <Link
    className="btn btn-light"
    to="/3rd-pillar-flow"
  >
    <Message>
      account.status.choice.pillar.third.success.action
    </Message>
  </Link>
</StatusBoxRow>
`;

exports[`ThirdPillarStatusBox renders the "pick tuleva" flow when user has some other fund manager 1`] = `
<StatusBoxRow
  lines={
    Array [
      "Tuleva III Samba Pensionifond",
      <small
        className="text-muted"
      >
        <Message
          params={
            Object {
              "contribution": <b>
                20
              </b>,
            }
          }
        >
          account.status.yearToDateContribution
        </Message>
      </small>,
    ]
  }
  name={
    <Message>
      account.status.choice.pillar.third
    </Message>
  }
  showAction={true}
>
  <Link
    className="btn btn-light"
    to="/3rd-pillar-flow"
  >
    <Message>
      account.status.choice.pillar.third.inactive.action
    </Message>
  </Link>
</StatusBoxRow>
`;

exports[`ThirdPillarStatusBox renders the "transfer incomplete" flow when user has several funds 1`] = `
<StatusBoxRow
  lines={
    Array [
      <Message>
        account.status.choice.pillar.third.transferIncomplete.label
      </Message>,
      <small
        className="text-muted"
      >
        <Message
          params={
            Object {
              "contribution": <b>
                20
              </b>,
            }
          }
        >
          account.status.yearToDateContribution
        </Message>
      </small>,
    ]
  }
  name={
    <Message>
      account.status.choice.pillar.third
    </Message>
  }
  showAction={true}
>
  <Link
    className="btn btn-light"
    to="/3rd-pillar-flow"
  >
    <Message>
      account.status.choice.pillar.third.transferIncomplete.action
    </Message>
  </Link>
</StatusBoxRow>
`;

exports[`ThirdPillarStatusBox renders the success flow 1`] = `
<StatusBoxRow
  lines={
    Array [
      "Tuleva III Samba Pensionifond",
      <small
        className="text-muted"
      >
        <Message
          params={
            Object {
              "contribution": <b>
                2500
              </b>,
            }
          }
        >
          account.status.yearToDateContribution
        </Message>
      </small>,
    ]
  }
  name={
    <Message>
      account.status.choice.pillar.third
    </Message>
  }
  ok={true}
  showAction={true}
>
  <Link
    className="btn btn-light"
    to="/3rd-pillar-flow"
  >
    <Message>
      account.status.choice.pillar.third.success.action
    </Message>
  </Link>
</StatusBoxRow>
`;
